--- a/sampleJavaProject/.project
+++ b/sampleJavaProject/.project
@@ -10,6 +10,7 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		kalli
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
